# eagle_mpc_ros

./: .gitignore  README.md
eagle_mpc_controller/: CMakeLists.txt  package.xml
eagle_mpc_controller/cfg/: params.cfg
eagle_mpc_controller/include/: mpc_runner.hpp
eagle_mpc_controller/launch/: mpc_runner.launch  rviz.launch
eagle_mpc_controller/rviz/: mpc_runner.rviz
eagle_mpc_controller/src/: mpc_runner.cpp
eagle_mpc_msgs/: CMakeLists.txt  package.xml
eagle_mpc_msgs/msg/: JointState.msg  Mission.msg  MotorsState.msg  SolverPerformance.msg  Thrust.msg  Trajectory.msg  Waypoint.msg  WholeBodyState.msg  WholeBodyTrajectory.msg
eagle_mpc_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
eagle_mpc_rviz_plugins/include/eagle_mpc_rviz_plugins/: ArrowVisual.h  LineVisual.h  PinocchioLinkUpdater.h  PointVisual.h  PolygonVisual.h  WholeBodyStateDisplay.h  WholeBodyTrajectoryDisplay.h
eagle_mpc_rviz_plugins/include/multicopter_mpc_rviz_plugins/: PointVisual.h
eagle_mpc_rviz_plugins/src/: ArrowVisual.cpp  LineVisual.cpp  PinocchioLinkUpdater.cpp  PointVisual.cpp  PolygonVisual.cpp  WholeBodyStateDisplay.cpp  WholeBodyTrajectoryDisplay.cpp
eagle_mpc_simulator/: CMakeLists.txt  package.xml
eagle_mpc_simulator/description/: mav_with_wind_gust.gazebo
eagle_mpc_simulator/launch/: simulator.launch  spawn_aerial_robot.launch  spawn_arm_controller.launch  spawn_mav.launch
eagle_mpc_simulator/scripts/: disturbance_trigger.py
eagle_mpc_viz/: CMakeLists.txt  package.xml  setup.py
eagle_mpc_viz/cfg/: visualization.cfg
eagle_mpc_viz/description/: hamster-father-fmd.dae  payload.urdf  payload_hamster.urdf
eagle_mpc_viz/launch/: mpc_controller_viz.launch  trajectory_generator_viz.launch
eagle_mpc_viz/rviz/: mpc_bag.rviz  mpc_controller_display.rviz  mpc_controller_payload_display.rviz  mpc_weighted_display.viz.rviz  trajectory_display.rviz
eagle_mpc_viz/scripts/: mpc_controller_viz.py  trajectory_generation_viz.py
eagle_mpc_viz/src/eagle_mpc_viz/: __init__.py  bag_tools.py  mpc_controller_fake.py  whole_body_interface.py  whole_body_state_publisher.py  whole_body_trajectory_publisher.py
eagle_mpc_yaml/: CMakeLists.txt  package.xml
eagle_mpc_yaml/mpc/: hexacopter370_flying_arm_3_mpc.yaml  hexacopter370_mpc.yaml  iris_mpc.yaml  iris_px4_mpc.yaml
eagle_mpc_yaml/multicopter/: iris_px4.yaml
eagle_mpc_yaml/trajectories/: hexacopter370_displacement.yaml  hexacopter370_flying_arm_1_displacement.yaml  hexacopter370_flying_arm_3_displacement.yaml  hexacopter370_flying_arm_3_displacement_w.yaml  hexacopter370_flying_arm_3_eagle_catch.yaml  hexacopter370_flying_arm_3_eagle_catch_nc.yaml  hexacopter370_flying_arm_3_hover.yaml  hexacopter370_flying_arm_3_monkey_bar.yaml  hexacopter370_flying_arm_3_move_arm.yaml  hexacopter370_hover.yaml  hexacopter370_passthrough.yaml  hexacopter680_flying_arm_2_hover.yaml  hextilt_flying_arm_5_push_slide.yaml  hextilt_hover.yaml  iris_hover.yaml  iris_loop.yaml  iris_passthrough.yaml  iris_px4_displacement.yaml  iris_px4_hover.yaml
multicopter_mpc_bag/: CMakeLists.txt  package.xml
multicopter_mpc_controller/: .gitignore  CMakeLists.txt  package.xml
multicopter_mpc_controller/cfg/: custom_rosconsole.conf  params.cfg
multicopter_mpc_controller/include/: mpc_runner.hpp
multicopter_mpc_controller/launch/: mpc_runner.launch  rviz.launch  simulator.launch
multicopter_mpc_controller/rviz/: mpc_runner.rviz
multicopter_mpc_controller/src/: mpc_runner.cpp
multicopter_mpc_msgs/: CMakeLists.txt  package.xml
multicopter_mpc_msgs/msg/: FloatingBaseState.msg  Mission.msg  MotorsState.msg  SolverPerformance.msg  Trajectory.msg  WholeBodyState.msg  WholeBodyTrajectory.msg
multicopter_mpc_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
multicopter_mpc_rviz_plugins/include/multicopter_mpc_rviz_plugins/: ArrowVisual.h  PinocchioLinkUpdater.h  PointVisual.h  WholeBodyStateDisplay.h  WholeBodyTrajectoryDisplay.h
multicopter_mpc_rviz_plugins/src/: ArrowVisual.cpp  PinocchioLinkUpdater.cpp  PointVisual.cpp  WholeBodyStateDisplay.cpp  WholeBodyTrajectoryDisplay.cpp
multicopter_mpc_simulator/: CMakeLists.txt  package.xml
multicopter_mpc_simulator/description/: mav_with_wind_gust.gazebo
multicopter_mpc_simulator/launch/: simulator.launch  spawn_aerial_robot.launch  spawn_arm_controller.launch  spawn_mav.launch
multicopter_mpc_simulator/scripts/: disturbance_trigger.py
multicopter_mpc_viz/: CMakeLists.txt  package.xml  setup.py
multicopter_mpc_viz/cfg/: visualization.cfg
multicopter_mpc_viz/description/: payload.urdf
multicopter_mpc_viz/launch/: mpc_controller_rviz.launch  mpc_controller_viz.launch  new_launch.launch  trajectory_generator_viz.launch
multicopter_mpc_viz/rviz/: mpc_bag.rviz  mpc_controller_display.rviz  mpc_controller_payload_display.rviz  mpc_weighted_display.viz.rviz  trajectory_display.rviz
multicopter_mpc_viz/scripts/: mpc_controller_rviz.py  mpc_controller_viz.py  trajectory_generation_viz.py
multicopter_mpc_viz/tools/: bag_plotter.py
multicopter_mpc_yaml/: CMakeLists.txt  package.xml
multicopter_mpc_yaml/controller_carrot/: carrot-mpc.yaml
multicopter_mpc_yaml/missions/: takeoff.yaml
multicopter_mpc_yaml/mpc/: hexacopter370_flying_arm_3_mpc.yaml  hexacopter370_mpc.yaml  iris_mpc.yaml  mpc.yaml
multicopter_mpc_yaml/mpc_main/: mpc-main.yaml
multicopter_mpc_yaml/trajectories/: am_eagle_catch.yaml  am_hover.yaml  hex_hover.yaml  hexacopter370_displacement.yaml  hexacopter370_flying_arm_3_displacement.yaml  hexacopter370_flying_arm_3_displacement_w.yaml  hexacopter370_flying_arm_3_eagle_catch.yaml  hexacopter370_flying_arm_3_eagle_catch_nc.yaml  hexacopter370_flying_arm_3_hover.yaml  hexacopter370_flying_arm_3_monkey_bar.yaml  hexacopter370_flying_arm_3_move_arm.yaml  hexacopter370_hover.yaml  hexacopter370_passthrough.yaml  hexacopter680_flying_arm_2_hover.yaml  hextilt_flying_arm_5_push_slide.yaml  hextilt_hover.yaml  iris_hover.yaml  iris_loop.yaml  iris_passthrough.yaml
multicopter_mpc_yaml/trajectory_generation/: trajectory-generator.yaml
(+11 files in other folders)
