<?xml version="1.0"?>
<package format="2">
  <name>eagle_mpc_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The eagle_mpc_rviz_plugins package</description>

  <maintainer email="pepms@todo.todo">pepms</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>eagle_mpc_msgs</build_depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>eagle_mpc_msgs</exec_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
